# Oscilla

./: Cargo.toml  README.md
src/: lib.rs  main.rs  params.rs
src/dsp/: envelope.rs  filter.rs  mod.rs  voice.rs
src/gui/: app.rs  knob_style.rs  mod.rs  popup.rs  theme.rs  waveform.rs
src/preset/: mod.rs
src/script/: mod.rs
src/wavetable/: mod.rs
